# MoneyPlant

./: .gitignore
API/: main.py  pyproject.toml
API/api/: add_bin.py  api.py  auth.py  config.py  curd.py  data.json  init_db.py  models.py  schemas.py
Hardware Interface/: door.py  example.py  inductiveSensor.py  main.py  stepper_motor.py  weight_scale.py
ML/: index.py  pyproject.toml  tempCodeRunnerFile.py  test_model.py
