[tool.poetry]
name = "waste_image_classifier"
version = "0.1.0"
description = ""
authors = ["Christo <christotantony2003@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scikit-learn = "^1.1.2"
tensorflow = "^2.9.1"
sklearn = "^0.0"
opencv-python = "^4.6.0"
matplotlib = "^3.5.3"
tensorflow-gpu = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
